--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -3,25 +3,36 @@
 {% block title %}Команды{% endblock %}
 
 {% block content %}
-    <h2>Список команд</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Название</th>
-                <th>Город</th>
-                <th>Стадион</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for team in teams %}
+<div class="container my-4">
+    <h2 class="text-primary">Список команд</h2>
+
+    {% if teams %}
+        <table class="table table-striped table-hover">
+            <thead>
                 <tr>
-                    <td>{{ team.id }}</td>
-                    <td>{{ team.name }}</td>
-                    <td>{{ team.city }}</td>
-                    <td>{{ team.stadium }}</td>
+                    <th>ID</th>
+                    <th>Название</th>
+                    <th>Город</th>
+                    <th>Стадион</th>
+                    <th>Действия</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for team in teams %}
+                    <tr>
+                        <td>{{ team.id }}</td>
+                        <td>{{ team.name }}</td>
+                        <td>{{ team.city }}</td>
+                        <td>{{ team.stadium }}</td>
+                        <td>
+                            <a href="/teams/{{ team.id }}" class="btn btn-info btn-sm">Подробнее</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p class="text-muted">Нет доступных команд для отображения.</p>
+    {% endif %}
+</div>
 {% endblock %}
