--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/static/css/styles.css">
+    <style>
+        /* Стиль для прикрепления футера */
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        main {
+            flex: 1;
+        }
+    </style>
 </head>
 <body>
     <!-- Фиксированный верхний колонтитул -->
@@ -47,14 +58,14 @@
     </main>
 
     <!-- Футер с улучшенным дизайном -->
-    <footer class="bg-primary text-white text-center p-4 mt-5">
+    <footer class="bg-primary text-white text-center p-4">
         <div class="container">
             <p>© 2024 Soccer Hub | Все права защищены</p>
-            <p>
+            <div class="social-icons">
                 <a href="https://facebook.com" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com" class="text-white me-3"><i class="fab fa-twitter"></i></a>
                 <a href="https://instagram.com" class="text-white"><i class="fab fa-instagram"></i></a>
-            </p>
+            </div>
         </div>
     </footer>
 
